[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "github-track"
version = "0.1.0"
authors = [{name = "OllyCodes"}]
description = "A simple CLI for retrieving github user event information"
readme = "README.md"
license = {file = "LICENSE" }
dependencies = ["requests"]

[project.scripts]
github-track = "github_track.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
